force-app/main/default/objects/Knowledge__kav/fields/CS_Article_Number__c.field-meta.xml
<CustomField>
    <fullName>CS_Article_Number__c</fullName>
    <description>This is a hyperlink field to be used in the Approval Page Layout so that user can open the Knowledge Detail page.</description>
    <formula>HYPERLINK(  $Label.CS_Protein_Customer_Service_Lightning_URL &amp; &#39;/lightning/r/Knowledge__kav/&#39; &amp; Id &amp; &#39;/view&#39; , ArticleNumber )</formula>
    <label>Article Number</label>
    <type>Text</type>
</CustomField>