force-app/main/default/objects/Knowledge__kav/fields/CS_Category__c.field-meta.xml
<CustomField>
    <fullName>CS_Category__c</fullName>
    <description>This field will define the category of the knowledge article.</description>
    <inlineHelpText>Select Knowledge Category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Information</fullName>
            </value>
            <value>
                <fullName>Job Aid</fullName>
            </value>
            <value>
                <fullName>Leadership Presentations</fullName>
            </value>
            <value>
                <fullName>On Boarding Documents</fullName>
            </value>
            <value>
                <fullName>System Documentation</fullName>
            </value>
            <value>
                <fullName>Fresh Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>