force-app/main/default/objects/Knowledge__kav/fields/CS_Description__c.field-meta.xml
<CustomField>
    <fullName>CS_Description__c</fullName>
    <description>This field will be rich text area field to be used to capture knowledge article detail content.</description>
    <inlineHelpText>Enter Knowledge Content</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>