force-app/main/default/objects/Knowledge__kav/fields/CS_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Last_Updated_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The field stores the last modified date information, so that it is available to email templates.</description>
    <label>Last Updated Date</label>
    <type>DateTime</type>
</CustomField>