force-app/main/default/objects/Knowledge__kav/fields/CS_Market_Channel__c.field-meta.xml
<CustomField>
    <fullName>CS_Market_Channel__c</fullName>
    <description>This field will define the market channel that article belongs to. There will be 4 options available Food Service, Protein Ingredients, Retail &amp; General.</description>
    <inlineHelpText>Market Channel of Knowledge Article</inlineHelpText>
    <label>Market Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Protein Ingredients</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>