force-app/main/default/objects/Knowledge__kav/recordTypes/CS_Protein_Customer_Service_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>CS_Protein_Customer_Service_Knowledge</fullName>
    <active>true</active>
    <description>This record type is used by Protein Customer Service Knowledge Article. All articles are Job Aid.</description>
    <label>Protein Customer Service Knowledge</label>
</RecordType>