force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>TITLE</columns>
    <columns>CS_Category__c</columns>
    <columns>ABSTRACT</columns>
    <columns>CS_Market_Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Published Articles</label>
</ListView>